# EDGAR-AlphaOps

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  check_data.py  config.py  debug_auth.py  debug_langfuse_deep.py  debug_sdk_span.py  docker-compose.yml  production_verification.py  pyproject.toml  reset_rag.py  seed_filings.py  verify_cloud_data.py  verify_event_study.py  verify_ingest.py  verify_langfuse.py  verify_market.py  verify_platform.py  verify_rag.py  verify_rag_citations.py  verify_xbrl.py
.github/workflows/: ci.yml
agents/: graph.py  state.py  tools.py
apps/: cli.py  streamlit_app.py
apps/api/: main.py
docs/: assumptions.md  coverage_matrix.md  gap_report.md  production_plan.md  sec_access.md  sprint_plan.md
ds/event_study/: engine.py
ds/risk_model/: engine.py
eval/: run_eval.py
eval/datasets/: gold_dataset.json
eval/ragas/: pipeline.py
lakehouse/: db.py
lakehouse/features/: builder.py
lakehouse/schemas/: companies.sql  event_studies.sql  features.sql  filings.sql  graph.sql  prices.sql  risk_metrics.sql  xbrl_facts.sql
observability/: logging.py  setup.py
pipelines/: features.py  models.py  reconcile.py  storage.py  tasks.py
pipelines/analytics/: event_study.py  volatility.py
pipelines/graph/: builder.py  extractor.py
pipelines/market/: client.py  stooq.py
pipelines/parse/: xbrl.py
pipelines/rag/: chunker.py  embedder.py  processor.py  store.py
pipelines/sec/: client.py  resolver.py  (+1 more)
tests/: conftest.py  test_agent_integrated.py.skip  test_compliance.py  test_config.py  test_event_study.py  test_features.py  test_graph.py  test_integration.py  test_market.py  test_observability.py  test_rag.py  test_reconcile.py  test_sec_rss.py  test_volatility.py  test_xbrl.py
(+8 files in other folders)
